style fix contrast theme button

--- a/pages/plants/plant/components/ThePlantView/components/ThePlantPresentation/style.module.scss
+++ b/pages/plants/plant/components/ThePlantView/components/ThePlantPresentation/style.module.scss
@@ -20,7 +20,7 @@
     height: 37rem;
     position: absolute;
     top: calc((100% - 48rem) / 2);
-    left: calc((37rem/2)/2.2 * -1);
+    left: calc((37rem / 2) / 2.2 * -1);
     z-index: 2;
     filter: var(--drop-filter);
   }
@@ -57,6 +57,12 @@
     }
     button {
       margin-top: 2rem;
+      color: var(--font-color-button);
+      background-color: var(--color-button);
+      opacity: 90%;
+      &:hover {
+        opacity: 100%;
+      }
     }
   }
 }
